# time_propagation

./: CMakeLists.txt  README.md
model1/: imRK4_input_parameters  output  output_file
source/: main.F90  mod_constants.F90  mod_hamiltonian.F90  mod_imRK4.F90  mod_imRK4_parameters.F90  mod_math.F90  mod_matrices.F90  mod_types.F90
